# moetodo

./: main.py  pyproject.toml
models/: todo.py  todo_test.py
src/: main.py
src/models/: __init__.py  todo.py
tests/: __init__.py  test_todoitem.py
